--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ a>.nyil_le {
     justify-content: center;
     align-items: center;
     height: var(--kezdo_oldal_szoveges_resze_magassag);
-    height: 100vh;
+    height: 100svh;
 }
 
 
