--- a/css/projektek/rocket_planner.css
+++ b/css/projektek/rocket_planner.css
@@ -55,22 +55,30 @@ body::-webkit-scrollbar-thumb:hover {
 /* #endregion */
 
 
-/*** =============================   BETÖLTÉS   =========================*/
-/* #region  BETÖLTÉS */
+/**=============== betöltés ===============*/
+/* #region   */
 #betoltes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    z-index: 100;
-    background: var(--vilagos_betu_szin);
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -60px;
+    margin-left: -60px;
 }
 
-.bx-loader-alt {
-    font-size: 50px;
-    color: #4d555e;
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 /* #endregion */
@@ -116,6 +124,7 @@ a>.nyil_le {
 
 /* #endregion */
 
+/*** =============================   mobile first       =========================*/
 
 /*** ======================================================
 
